2010-05-17 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-profile.c (na_object_profile_parse_parameters):
	Do not add extraneous blanks when parsing parameters.

	* configure.ac: Post release bump version number.

	* src/io-desktop/nadp-reader.c (read_done_load_profiles):
	Do not reload already loaded profiles.
	Just ignore non-referenced profiles.

	* src/io-gconf/nagp-reader.c
	(read_done_action_load_profiles_from_list): Do not reload already loaded profiles.

	* src/utils/nautilus-actions-new.c:
	Factorize error message to make translation easier.

	* src/utils/nautilus-actions-run.c:
	Mark two new strings for translation.

2010-04-14 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Update before release.

	* configure.ac: Bump version number before release.

	* src/core/na-selected-info.h:
	* src/core/na-selected-info.c (na_selected_info_get_name):
	Renamed as na_selected_info_get_path.

	* src/core/na-icontext.c
	(is_current_folder_inside, is_target_selection_candidate):
	Updated accordingly.

	* src/core/na-object-profile.c (na_object_profile_parse_parameters):
	Do not try to deal with null values.

	* src/plugin-menu/nautilus-actions.c (create_item_from_profile):
	Duplicate the candidate profile, set the parent to null.

	* src/core/na-selected-info.c (na_selected_info_get_location):
	Increment the reference count of the returned location.

	* src/core/na-gconf-utils.c (dump_entry):
	Do not try to dump a null value.

	* src/core/na-selected-info.c
	(dump): New function.
	(na_selected_info_create_for_uri): Accepts a mimetype.

	* src/plugin-tracker/na-tracker-dbus.c
	(na_tracker_dbus_get_selected_paths): Also sends the mimetype.

	* src/utils/nautilus-actions-run.c (targets_from_selection):
	Get the mimetype from DBus interface.

2010-04-12 Pierre Wieser <pwieser@trychlos.org>

	* src/plugin-menu/Makefile.am:
	* src/plugin-tracker/Makefile.am: Fix incorrect log domains.

2010-04-09 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updated.
