@@ -82,6 +82,7 @@ NAObjectAction *na_object_action_new_with_defaults( void );
 gchar          *na_object_action_get_new_profile_name( const NAObjectAction *action );
 
 void            na_object_action_attach_profile( NAObjectAction *action, NAObjectProfile *profile );
+void            na_object_action_set_last_version( NAObjectAction *action );
 
 gboolean        na_object_action_is_candidate( const NAObjectAction *action, guint target, GList *selection );
 
